# causality_data_generation

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  question_gen.py  test.py
pool_simulate/: main.py  test.py
pool_simulate/shot_utils/: __init__.py  rendering.py  simulation.py  stats.py  summary.py
question_gen/: data_utils.py  generate_stats.py  generator.py  options.py  question_gen.py  question_gen_old.py  tense.py  validate_qa.py
scripts/: run_simulation.sh
shot_utils/: __init__.py  config.py  rendering.py  simulation.py  summary.py
tests/: __init__.py  test.py  test_data_utils.py  test_generator_pipeline.py  test_options.py
